# mithril

./: Cargo.toml  Justfile  Makefile  Xargo.toml  bochs.conf  kernel.elf  link.ld  os.iso  x86_64-mithril.json
asm/: loader.s
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.s  long_mode_init.s  multiboot_header.s
src/interrupts/: gdt.rs  idt.rs  mod.rs
src/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
