[package]
authors = ["nokaa <nokaa@cock.li>"]
name = "mithril"
version = "0.1.0"

[dependencies]
bitflags = "0.7.0"
multiboot2 = "0.3.1"
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.2.1"

[dependencies.x86]
version = "0.8.0"
default-features = false

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
