[package]
authors = ["nokaa <nokaa@cock.li>"]
name = "mithril"
version = "0.1.0"

[dependencies]
bitflags = "0.7.0"
multiboot2 = "0.3.1"
once = "0.3.2"
rlibc = "1.0.0"
spin = "0.4.5"
volatile = "0.2.1"

#[dependencies.bump_allocator]
#path = "libs/bump_allocator"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.x86]
default-features = false
version = "0.8.0"

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
